public/style.css
/* *************************************************************** */
/* import + root section + body styles */
/* *************************************************************** */

@font-face {
  font-family: 'formular1';
  src: url('font.ttf');
}

* {
  font-family: 'formular1', sans-serif !important;
}

:root {
  --blue-gray: rgb(112, 151, 151);
  --header-bg: rgb(61, 60, 60);
  --light-gray: rgb(76, 78, 77);
  --color1: rgb(40, 133, 181);
}

body {
  margin: 0;
  padding: 0;
  color: white;
  z-index: 1;
}

html {
  scroll-behavior: smooth;
}

/* *************************************************************** */
/* home section */
/* *************************************************************** */

#home {
  background-color: var(--header-bg);
  overflow-x: hidden;
}

#home * {
  overflow: hidden;
}

#home .header-section {
  background-color: var(--light-gray);
  height: 100vh;
}

#home .header-section .media video {
  height: 100vh;
  width: 100vw;
  position: absolute;
  z-index: 0;
}

#home .header-section .media img {
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0;
}

#home .header-section .cta-button {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  bottom: 13%;
  width: 100%;
}

#home .header-section .cta-button button {
  padding: 1rem;
  border-radius: 10px;
  background-color: var(--color1);
  z-index: 110;
}

#home .header-section .cta-button button a {
  text-decoration: none;
  font-family: 'formular1', sans-serif;
  color: white;
}

#control-button-left,
#control-button-right {
  position: absolute;
  bottom: 50%;
  z-index: 3;
  background: none;
  border: none;
  cursor: pointer;
}

#control-button-left {
  left: 2%;
  z-index: 12;
}

#control-button-right {
  right: 2%;
  z-index: 12;
}

#home .intro-section {
  height: auto;
  padding: 3rem;
  color: white;
  box-sizing: border-box;
}

#home .intro-section h1 {
  text-align: center;
}

#home .intro-section li::marker {
  font-size: 24px;
}

#home .intro-section .container {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

#home .intro-section .text-section p {
  text-align: justify;
  line-height: 20px;
  letter-spacing: 1px;
}

#home .intro-section .image-section img {
  width: 70%;
  height: 70%;
  margin: 15%;
}

#home .COTD-section {
  height: auto;
  text-align: left;
  background-color: var(--light-gray);
  padding: 5rem 30%;
}

#home .COTD-section h2 {
  text-align: center;
}

#home .carImg img {
  height: auto;
  width: 100%;
}

#home .nav-mobile {
  z-index: 10;
}

/* *************************************************************** */
/* gallery + home section combinations */
/* *************************************************************** */

#home .COTD-section .textSection1,
#gallery .textSection1 {
  display: grid;
  grid-template-rows: auto 1fr;
  grid-template-columns: 4fr 1fr;
  padding: 1rem;
}

#home .COTD-section .card,
#gallery .card {
  border: 3px solid white;
  display: grid;
  border-radius: 3%;
  grid-template-rows: 1fr auto;
  margin: 30px;
}

/* *************************************************************** */
/* gallery section */
/* *************************************************************** */

#gallery .gallery-container {
  width: 100%;
  display: grid;
  justify-content: space-evenly;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 1rem;
  
}

#gallery .card .carImg img {
  width: 100%;
  height: auto;
  border-radius: 3% 3% 0 0;
  border-bottom: 3px solid white;
}

#gallery main {
  display: grid;
  grid-template-columns: auto;
}

#gallery .card {
  z-index: 11;
}

#gallery {
  background-color: var(--light-gray);
}

#gallery nav {
  padding-bottom: 3rem;
}

#gallery .filter {
  z-index: 100;
}

#gallery .filter .filterClass {
  text-align: left;
}

/* *************************************************************** */
/* impressum + privacy section */
/* *************************************************************** */

#impressum,
#privacy {
  background-color: var(--blue-gray);
}

#privacy main,
#impressum main {
  padding: 100px 20% 0 20%;
}

#privacy .buttonDiv {
  text-align: right;
  padding-bottom: 100px;
}

#privacy button {
  padding: 1rem;
}

/* *************************************************************** */
/* contact section */
/* *************************************************************** */

#contact-page {
  background-color: var(--light-gray);
  z-index: 2;
}

#contact {
  height: auto;
  text-align: center;
  display: flex;
  padding: 5rem;
  flex-direction: column;
  align-items: center;
  position: relative;
}

#contact .contact-slide-left {
  z-index: 2;
}

#contact .contact-right {
  width: 100%;
  max-width: 600px;
  padding: 2rem;
  display: grid;
  grid-template-rows: auto auto auto auto;
  grid-template-columns: 1fr;
  grid-template-areas: 'top-left' 'top-right' 'message' 'button';
  gap: 1rem;
  position: relative;
  z-index: 5;
}

#contact .contact-right input,
#contact .contact-right #message {
  border-radius: 10px;
  margin: 10px 0;
  font-size: 22px;
  width: 500px;
}

#contact .contact-right input:first-of-type {
  grid-area: top-left;
}

#contact .contact-right input:nth-of-type(2) {
  grid-area: top-right;
}

#contact .contact-right #message {
  margin-top: 10px;
  height: 156px;
  border-radius: 10px;
  padding: 10px;
  font-size: 25px;
  resize: none;
  grid-area: message;
}

#contact .contact-right button[type='submit'] {
  grid-area: button;
  padding: 10px 20px;
  font-size: 18px;
  border: none;
  border-radius: 10px;
  color: white;
  cursor: pointer;
  width: 87%;
  background-color: var(--color1);
}

#contact .refreshCaptcha {
  border-radius: 10px;
  border: none;
  padding: 5px;
}

#contact .captcha-field {
  display: flex;
  justify-content: space-evenly;
}

input {
  padding: 0.5rem;
}

#contact .contact-left h3 {
  font-size: var(--default-font-size);
  line-break: auto;
}

#contact .form {
  display: flex;
  padding: 5rem;
  flex-direction: column;
  align-items: center;
}

/* *************************************************************** */
/* nav section */
/* *************************************************************** */

nav ul {
  display: flex;
  gap: 2rem;
  margin-right: 2%;
  position: absolute;
  z-index: 15;
}

nav ul li {
  list-style-type: none;
  display: inline-block;
}

nav ul li a {
  font-size: 30px;
  text-decoration: none;
  color: white;
}

.nav-mobile {
  height: 100vh;
  width: 100%;
  position: absolute;
  justify-content: center;
  align-items: center;
}

.nav-mobile-links {
  display: none;
  text-align: center;
}

.nav-mobile-links ul {
  padding: 0;
}

.nav-mobile-links ul li {
  list-style: none;
  margin: 1.5rem 0;
}

.nav-mobile-links a {
  text-decoration: none;
  color: white;
  font-size: 60px;
}

nav ul li::after {
  content: '';
  width: 0%;
  height: 2px;
  display: block;
  transition: 1s;
  background-color: white;
  margin: auto;
}

nav ul li:hover::after {
  width: 100%;
}

/* *************************************************************** */
/* footer section */
/* *************************************************************** */

footer {
  justify-content: space-between;
  padding: 0 3rem;
  display: flex;
  overflow: hidden;
}

footer .footer-links {
  display: flex;
  gap: 1rem;
}

footer .footer-links a {
  color: white;
}

/* *************************************************************** */
/* media queries */
/* *************************************************************** */

@media screen and (max-width: 800px) {
  nav ul li a {
    font-size: 20px;
  }

  nav {
    display: none;
  }

  .nav-mobile-symbol {
    display: block;
    position: absolute;
    top: 4%;
    left: 6%;
  }

  .nav-mobile {
    display: flex;
    z-index: 5;
  }

  footer * {
    display: none;
  }
}

@media screen and (min-width: 801px) {
  .nav-mobile-symbol {
    display: none;
  }
}

@media screen and (max-width: 800px) {
  #contact .contact-right input,
  #contact .contact-right #message {
    width: 300px;
  }
}

@media screen and (max-width: 500px) {
  #contact .contact-right input,
  #contact .contact-right #message {
    width: 250px;
  }
}

@media screen and (max-width: 1200px) {
  #gallery .gallery-container {
    grid-template-columns: 1fr 1fr;
  }
}

@media screen and (max-width: 800px) {
  #gallery .gallery-container {
    grid-template-columns: 1fr;
    padding-top: 6rem;
  }

  #gallery main {
    display: block;
  }

  #gallery .filter {
    position: absolute;
    top: 2%;
    left: 20%;
    font-size: 15px;
  }
}

@media screen and (min-width: 801px) {
  #gallery .filter {
    position: relative;
    top: 2%;
    left: 3.75%;
  }
}

@media screen and (max-width: 800px) {
  #home .intro-section .container {
    grid-template-columns: 1fr;
  }

  #home #COTD-section {
    padding: 1rem 2rem;
  }

  #home #COTD-section img {
    width: 100%;
    height: auto;
  }
}

